## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcivutility.a

INCLUDES = -I../intl

## Above, note -I../intl instead of -I$(top_srdir/intl) is deliberate.

libcivutility_a_SOURCES = \
		astring.c       \
		astring.h       \
		capability.c	\
		capability.h	\
		fcintl.c	\
		fcintl.h	\
		genlist.c	\
		genlist.h	\
		hash.c		\
		hash.h		\
		inputfile.c	\
		inputfile.h	\
		ioz.c		\
		ioz.h		\
		log.c		\
		log.h		\
		netintf.c	\
		netintf.h	\
		pqueue.c	\
		pqueue.h	\
		mem.c           \
		mem.h		\
		rand.c		\
		rand.h		\
		registry.c	\
		registry.h	\
		sbuffer.c	\
		sbuffer.h	\
		shared.c	\
		shared.h	\
		speclist.h	\
		speclist_c.h	\
		specvec.h	\
		specvec_c.h	\
		support.c	\
		support.h	\
		timing.c	\
		timing.h
