## Process this file with automake to produce Makefile.in

SUBDIRS = 

noinst_LIBRARIES = libguiclient.a
AM_CPPFLAGS = -I. -I$(top_srcdir)/utility -I$(top_srcdir)/utility/ftwl -I$(top_srcdir)/common -I$(top_srcdir)/common/aicore -I$(srcdir)/.. -I$(srcdir)/../include -I../../intl @CLIENT_CFLAGS@

## Above, note -I../../intl instead of -I$(top_srdir)/intl is deliberate.

libguiclient_a_SOURCES = \
	chatline.c	\
	chatline.h	\
	citydlg.c	\
	citydlg.h	\
	cityrep.c	\
	cityrep.h	\
	colors.c	\
	colors.h	\
	connectdlg.c	\
	connectdlg.h	\
	dialogs.c	\
	dialogs.h	\
	diplodlg.c	\
	diplodlg.h	\
	finddlg.c	\
	finddlg.h	\
	gotodlg.c	\
	gotodlg.h	\
	graphics.c	\
	graphics.h	\
	gui_main.c	\
	gui_main.h	\
	gui_text.c	\
	gui_text.h	\
	helpdlg.c	\
	helpdlg.h	\
	inteldlg.c	\
	inteldlg.h	\
	mapctrl.c	\
	mapctrl.h	\
	mapview.c	\
	mapview.h	\
	menu.c		\
	menu.h		\
	messagedlg.c	\
	messagedlg.h	\
	messagewin.c	\
	messagewin.h	\
	pages.c		\
	pages.h		\
	plrdlg.c	\
	plrdlg.h	\
	ratesdlg.c	\
	ratesdlg.h	\
	repodlgs.c	\
	repodlgs.h	\
	spaceshipdlg.c	\
	spaceshipdlg.h	\
	wldlg.c		\
	wldlg.h		\
	chat.c		\
	chat.h
