## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libguiclient.a
INCLUDES = -I$(srcdir)/../include -I$(top_srcdir)/common @CLIENT_CFLAGS@

libguiclient_a_SOURCES = \
	chatline.h	\
	chatline.c	\
	citydlg.c	\
	citydlg.h	\
	cityrep.c	\
	clinet.c	\
	clinet.h	\
	colors.c	\
	colors.h	\
	connectdlg.c	\
	connectdlg.h	\
	dialogs.c	\
	dialogs.h	\
	diplodlg.c	\
	diplodlg.h	\
	finddlg.c	\
	gamedlgs.c	\
	gotodlg.c	\
	gotodlg.h	\
	graphics.c	\
	graphics.h	\
	gui_main.c	\
	gui_main.h	\
	gui_stuff.c	\
	gui_stuff.h	\
	helpdlg.c	\
	inputdlg.c	\
	inputdlg.h	\
	inteldlg.c	\
	mapctrl.c	\
	mapctrl.h	\
	mapview.c	\
	mapview.h	\
	menu.c		\
	menu.h		\
	messagedlg.c	\
	messagewin.c	\
	plrdlg.c	\
	repodlgs.c	\
	repodlgs.h	\
	spaceshipdlg.c	\
	spaceshipdlg.h

