## Process this file with automake to produce Makefile.in

noinst_LTLIBRARIES = libgui-sdl2.la

AM_CPPFLAGS = \
	-I$(srcdir)/.. \
	-I$(srcdir)/../include \
	-I$(top_srcdir)/utility \
        -I$(top_srcdir)/common \
	-I$(top_srcdir)/common/aicore \
	-I$(top_srcdir)/common/networking \
	-I$(srcdir)/../agents \
	-I$(top_srcdir)/dependencies/tinycthread \
	-I$(top_srcdir)/gen_headers/enums \
        $(gui_sdl2_cflags)

libgui_sdl2_la_SOURCES = \
	action_dialog.c \
	canvas.c	\
	canvas.h	\
	chatline.c	\
	chatline.h	\
	citydlg.c	\
	citydlg.h	\
	cityrep.c	\
	cityrep.h	\
	cma_fe.c	\
	cma_fe.h	\
	colors.c	\
	colors.h	\
	connectdlg.c	\
	connectdlg.h	\
	dialogs.c	\
	dialogs.h	\
	diplodlg.c	\
	diplodlg.h	\
	finddlg.c	\
	finddlg.h	\
	gotodlg.c	\
	gotodlg.h	\
	graphics.c	\
	graphics.h	\
	gui_id.h	\
	gui_main.c	\
	gui_main.h	\
	gui_mouse.c	\
	gui_mouse.h	\
	gui_string.c	\
	gui_string.h	\
	gui_tilespec.c	\
	gui_tilespec.h  \
	helpdlg.c	\
	helpdlg.h	\
	infradlg.c	\
	inteldlg.c	\
	inteldlg.h	\
	luaconsole.c	\
	luaconsole.h	\
	mapctrl.c	\
	mapctrl.h	\
	mapview.c	\
	mapview.h	\
	menu.c		\
	menu.h		\
	messagewin.c	\
	messagewin.h	\
	optiondlg.h	\
	optiondlg.c	\
	pages.c		\
	plrdlg.c	\
	plrdlg.h	\
	repodlgs.c	\
	repodlgs.h	\
	spaceshipdlg.c	\
	sprite.c	\
	sprite.h	\
	themebackgrounds.c \
	themebackgrounds.h \
	themecolors.c	\
	themecolors.h	\
	themes.c	\
	themespec.c	\
	themespec.h	\
	utf8string.c	\
	utf8string.h	\
	voteinfo_bar.c	\
	widget.c	\
	widget.h	\
	widget_button.c \
	widget_button.h \
	widget_checkbox.c \
	widget_checkbox.h \
	widget_combo.c \
	widget_combo.h \
	widget_core.c	\
	widget_edit.c	\
	widget_edit.h	\
	widget_icon.c	\
	widget_icon.h	\
	widget_label.c  \
	widget_label.h  \
	widget_p.h	\
	widget_scrollbar.c	\
	widget_scrollbar.h	\
	widget_window.c \
	widget_window.h \
	wldlg.c		\
	wldlg.h
