## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libguiclient.a
INCLUDES = -I. -I$(srcdir)/.. -I$(srcdir)/../include -I$(top_srcdir)/common -I../../intl @CLIENT_CFLAGS@

## Above, note -I../../intl instead of -I$(top_srdir)/intl is deliberate.

libguiclient_a_SOURCES = \
	chatline.c	\
	chatline.h	\
	citydlg.c	\
	citydlg.h	\
	cityrep.c	\
	cityrep.h	\
	colors.c	\
	colors.h	\
	connectdlg.c	\
	connectdlg.h	\
	dialogs.c	\
	dialogs.h	\
	diplodlg.c	\
	diplodlg.h	\
	finddlg.c	\
	gotodlg.c	\
	gotodlg.h	\
	graphics.c	\
	graphics.h	\
	gui_main.c	\
	gui_main.h	\
	helpdlg.c	\
	helpdlg.h	\
	inteldlg.c	\
	mapctrl.c	\
	mapctrl.h	\
	mapview.c	\
	mapview.h	\
	menu.c		\
	menu.h		\
	messagedlg.c	\
	messagewin.c	\
	messagewin.h	\
	plrdlg.c	\
	plrdlg.h	\
	ratesdlg.c	\
	repodlgs.c	\
	repodlgs.h	\
	spaceshipdlg.c	\
	spaceshipdlg.h
