## Process this file with automake to produce Makefile.in

#include the following line when a win32 port is ready
#noinst_LIBRARIES = libguiclient.a
INCLUDES = -I. -I$(srcdir)/.. -I$(srcdir)/../include -I$(top_srcdir)/common -I../../intl @CLIENT_CFLAGS@

## Above, note -I../../intl instead of -I$(top_srdir)/intl is deliberate.
