## Process this file with automake to produce Makefile.in

EXTRA_DIST = \
	cityicon.ico	\
	freeciv.ico	\
	goto_cursor.xbm	\
	goto_cursor_mask.xbm	\
	chatline_g.h	\
	citydlg_g.h	\
	cityrep.h	\
	civclient.h	\
	climisc.h	\
	clinet_g.h	\
	connectdlg_g.h	\
	dialogs_g.h	\
	diplodlg_g.h	\
	finddlg.h	\
	gotodlg_g.h	\
	graphics_g.h	\
	gui_main_g.h	\
	helpdlg.h	\
	inteldlg.h	\
	mapctrl_g.h	\
	mapview_g.h	\
	menu_g.h	\
	messagedlg.h	\
	meswindlg.h	\
	options.h	\
	packhand.h	\
	plrdlg.h	\
	ratesdlg.h	\
	repodlgs_g.h	\
	spaceshipdlg_g.h
