## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	cityicon.ico	\
	freeciv.ico	\
	goto_cursor.xbm	\
	goto_cursor_mask.xbm	\
	chatline_g.h	\
	citydlg_g.h	\
	cityrep_g.h	\
	civclient.h	\
	climisc.h	\
	clinet.h	\
	connectdlg_g.h	\
	dialogs_g.h	\
	diplodlg_g.h	\
	finddlg.h	\
	gotodlg_g.h	\
	graphics_g.h	\
	gui_main_g.h	\
	helpdata.h	\
	helpdlg_g.h	\
	inteldlg.h	\
	mapctrl_g.h	\
	mapview_g.h	\
	menu_g.h	\
	messagedlg.h	\
	messagewin_g.h	\
	options.h	\
	packhand.h	\
	plrdlg_g.h	\
	ratesdlg.h	\
	repodlgs_g.h	\
	spaceshipdlg_g.h \
	tilespec.h
