## Process this file with automake to produce Makefile.in

noinst_HEADERS = \
	cityicon.ico	\
	freeciv.ico	\
	drop_cursor.xbm	\
	drop_cursor_mask.xbm	\
	goto_cursor.xbm	\
	goto_cursor_mask.xbm	\
	nuke_cursor.xbm	\
	nuke_cursor_mask.xbm	\
	patrol_cursor.xbm	\
	patrol_cursor_mask.xbm	\
	chatline_g.h	\
	citydlg_g.h	\
	cityrep_g.h	\
	colors_g.h	\
	connectdlg_g.h	\
	dialogs_g.h	\
	diplodlg_g.h	\
	finddlg_g.h	\
	gotodlg_g.h	\
	graphics_g.h	\
	gui_main_g.h	\
	helpdlg_g.h	\
	inteldlg_g.h	\
	mapctrl_g.h	\
	mapview_g.h	\
	menu_g.h	\
	messagedlg_g.h	\
	messagewin_g.h	\
	pages_g.h	\
	plrdlg_g.h	\
	ratesdlg_g.h	\
	repodlgs_g.h	\
	spaceshipdlg_g.h	\
	wldlg_g.h
